Closed Bug 1110641 Opened 10 years ago Closed 10 years ago

widget/cocoa/ComplexTextInputPanel.mm:191:11: warning: unused variable 'minWidth' [-Wunused-variable]

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla37

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Josh, minWidth is no longer used because you hardcoded NSMakeRect() width to 500:

https://hg.mozilla.org/mozilla-central/rev/a6db8f54f5aa#l34.160

Was that your intention? If so, we can remove the now unused "ui.plugin.panel.min-width" pref from modules/libpref/init/all.js.
Attachment #8535475 - Flags: review?(joshmoz)
https://hg.mozilla.org/mozilla-central/rev/adb8e0572744
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Attachment #8535475 - Flags: review?(joshmoz)
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: