Bug 1110641 - Remove unused variable `minWidth` and "ui.plugin.panel.min-width" pref from widget/cocoa/ComplexTextInputPanel.mm. r=josh